# mcpb

./: .gitignore  CLAUDE.md  MANIFEST.md  PROJECT_STATUS.md  README.md  package-lock.json  package.json
examples/: README.md
examples/chrome-applescript/: manifest.json
examples/edge-applescript/: manifest.json  package.json
examples/edge-applescript/server/: index.js
examples/file-manager-python/: pyproject.toml
examples/file-manager-python-package/: .mcpbignore  manifest.json  pyproject.toml
examples/file-manager-python-package/mcp_server_file_manager/: __init__.py  __main__.py  server.py
examples/file-system-node/: package.json
examples/hello-world-node/: manifest.json  package.json
examples/hello-world-uv/: README.md
examples/pypi-python/: README.md  ZSCALER_FIX.md  manifest.json  pyproject.toml
examples/pypi-python/src/example_pypi_mcp/: __init__.py  main.py
examples/universal-cli-based/: .env.example  AI_OPTIMIZATION.md  COMPRESSION_EXAMPLES.md  INDEX.md  MIGRATION_GUIDE.md  QUANTUM_COMPRESSION.md  README.md  SCREENSHOTS.md  TEMPLATE.md  build-dxt.sh  manifest.json  setup-new-dxt.sh
examples/universal-cli-based/server/: index.js  install.js  package.json
scripts/: build-mcpb-schema.js
src/: cli.ts  index.ts  node.ts  schemas.ts  types.ts
src/cli/: cli.ts  init.ts  pack.ts
src/node/: files.ts  sign.ts  validate.ts
src/schemas/: 0.1.ts  0.2.ts  0.3.ts  1.0.ts  any.ts  index.ts  latest.ts  vNext.ts
src/shared/: common.ts  constants.ts
test/: cli.test.ts  config.test.ts  icon-validation.test.ts  init.test.ts  invalid-manifest.json  schemas.test.ts  sign.e2e.test.ts  valid-manifest.json
